@@ -35,7 +35,9 @@ Release 0.3.0 - Unreleased
   INCOMPATIBLE CHANGES
 
   NEW FEATURES
-  HCAT-204. HCatRecord SerDe (kgorath via gates)
+  HCAT-207. Changes to current HCat subsystem to allow it to work with hive (khorgath via gates)
+
+  HCAT-204. HCatRecord SerDe (khorgath via gates)
 
   HCAT-192. HBase output storage driver integration with zookeeper based revision manager (toffer via hashutosh) 
 
